src/zephyr_c/net/znet_if.nim


## *
##  @brief Set network interface into promiscuous mode
##
##  @details Note that not all network technologies will support this.
##
##  @param iface Pointer to network interface
##
##  @return 0 on success, <0 if error
##

proc net_if_set_promisc*(iface: ptr net_if): cint {.importc: "net_if_set_promisc",
    header: hdr.}


## *
##  @brief Set network interface into normal mode
##
##  @param iface Pointer to network interface
##

proc net_if_unset_promisc*(iface: ptr net_if) {.importc: "net_if_unset_promisc",
    header: hdr.}


## *
##  @brief Check if promiscuous mode is set or not.
##
##  @param iface Pointer to network interface
##
##  @return True if interface is in promisc mode,
##          False if interface is not in in promiscuous mode.
##

proc net_if_is_promisc*(iface: ptr net_if): bool {.importc: "net_if_is_promisc",
    header: hdr.}


## *
##  @brief Check if there are any pending TX network data for a given network
##         interface.
##
##  @param iface Pointer to network interface
##
##  @return True if there are pending TX network packets for this network
##          interface, False otherwise.
##

proc net_if_are_pending_tx_packets*(iface: ptr net_if): bool {.importc: "$1", header: hdr.}

when CONFIG_NET_POWER_MANAGEMENT:
  ##  @brief Suspend a network interface from a power management perspective
  ##
  ##  @param iface Pointer to network interface
  ##
  ##  @return 0 on success, or -EALREADY/-EBUSY as possible errors.
  ##
  proc net_if_suspend*(iface: ptr net_if): cint {.importc: "net_if_suspend",
      header: hdr.}
  

  ##  @brief Resume a network interface from a power management perspective
  ##
  ##  @param iface Pointer to network interface
  ##
  ##  @return 0 on success, or -EALREADY as a possible error.
  ##
  proc net_if_resume*(iface: ptr net_if): cint {.importc: "net_if_resume",
      header: hdr.}
  
  ##  @brief Check if the network interface is suspended or not.
  ##
  ##  @param iface Pointer to network interface
  ##
  ##  @return True if interface is suspended, False otherwise.
  ##
  proc net_if_is_suspended*(iface: ptr net_if): bool {.
      importc: "net_if_is_suspended", header: hdr.}


type
  net_if_api* {.importc: "net_if_api", header: hdr, bycopy.} = object
    init* {.importc: "init".}: proc (iface: ptr net_if)

